--- a/assets/application.scss
+++ b/assets/application.scss
@@ -129,6 +129,25 @@ p.splash{
   }
 }
 
+.album {
+  img {
+    max-width: 100%;
+    padding-bottom: $padding-large-vertical;
+  }
+}
+
+.albumlist {
+  font-size: 2em;
+}
+
+.tracklisting {
+  font-size: 1.5em;
+}
+
+.albumlink {
+  text-align: center;
+}
+
 // cargo-culted straight outta bootstrap
 .dl-horizontal {
   @media (min-width: 0) {
