--- a/_layouts/album.html
+++ b/_layouts/album.html
@@ -13,7 +13,7 @@ layout: default
     </p>
   </div>
   <div class='col-md-6 album'>
-    <img src='/assets/images/album-covers/{{ page.title | lowercase }}.jpg' alt='{{ page.title }}'/>
+    <img src='/assets/images/album-covers/{{ page.cover_image }}' alt='{{ page.title }}'/>
   </div>
   <div class='col-md-3'>
     <h2>Tracks</h2>
