Add certs script

--- a/_includes/open-data-certificate.html
+++ b/_includes/open-data-certificate.html
@@ -1,3 +1,5 @@
 <div class='certificate'>
   <script src='https://certificates.theodi.org/datasets/22648/certificate/badge.js'></script>
+  <em>For Stu</em>
+  <script src="https://open-data-certificate.dev/datasets/badge.js"></script>
 </div>
