--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -2,7 +2,7 @@
 {% if page.gig_og %}
   {% capture title %}Raw Funk Maharishi LIVE at {{ page.title }}, {{ page.location | split:"," | first }} on {{ page.date | date_to_long_string }} at {{ page.time }}{% endcapture %}
 
-  {% capture description %}Raw Funk Maharishi will bring the LIVE FUNK to {{ page.title }}, {{ page.location }} on {{ page.date | date_to_long_string }} at {{ page.time }}{% endcapture %}
+  {% capture description %}Raw Funk Maharishi LIVE at {{ page.title }}, {{ page.location }} on {{ page.date | date_to_long_string }} at {{ page.time }}{% endcapture %}
 {% else %}
   {% capture title %}Raw Funk Maharishi » {{ page.title }}{% endcapture %}
 {% endif %}
