--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     {% endif %}
     <title>{{ title }}</title>
 
-    {% include open-graph.html %}
+    {% include social.html %}
 
   </head>
 
