Back to nice maps

--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -69,7 +69,7 @@ layout: default
     </div>
 
     <div class='col-md-6'>
-      {% include shitty-map.html latitude = page.latitude longitude = page.longitude location = page.location %}
+      {% include map.html latitude = page.latitude longitude = page.longitude location = page.location %}
     </div>
   </article>
 </div>
