--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -55,12 +55,25 @@ layout: default
             </dd>
           {% endif %}
 
-          {% if page.facebook_id %}
+          {% if page.facebook_id or page.venue_website %}
             <dt>More info</dt>
             <dd>
-              <a href='https://facebook.com/events/{{ page.facebook_id }}/' title='Facebook event'>
-                Facebook
-              </a>
+              <ul class='more-info'>
+                {% if page.venue_website %}
+                  <li>
+                    <a href='{{ page.venue_website }}' title='Venue website'>
+                      {{ page.venue_website }}
+                    </a>
+                  </li>
+                {% endif %}
+                {% if page.facebook_id  %}
+                  <li>
+                    <a href='https://facebook.com/events/{{ page.facebook_id }}/' title='Facebook event'>
+                      Facebook
+                    </a>
+                  </li>
+                {% endif %}
+              </ul>
             </dd>
           {% endif %}
 
