--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -2,23 +2,23 @@
 layout: default
 ---
 <div class='row'>
-  <div class='col-xs-3 preceeding-gig'>
+  <!--<div class='col-xs-3 preceeding-gig'>
     {% if page.previous %}
         <a href='{{ page.previous.url }}' class='btn btn-info'>
           <i class='fa fa-angle-double-left'></i> <span class='hidden-xs'>{{ page.previous.title }}, {{ page.previous.date | date: "%-d %B"}}</span>
         </a>
     {% endif %}
-  </div>
-  <div class='col-xs-6'>
+  </div>-->
+  <div class='col-xs-12'>
     <h1 class='main-title'>{{ page.title }}</h1>
   </div>
-  <div class='col-xs-3 following-gig'>
+  <!--<div class='col-xs-3 following-gig'>
     {% if page.next %}
       <a href='{{ page.next.url }}' class='btn btn-info'>
         <span class='hidden-xs'>{{ page.next.title }}, {{ page.next.date | date: "%-d %B"}}</span> <i class='fa fa-angle-double-right'></i>
       </a>
     {% endif %}
-  </div>
+  </div>-->
 </div>
 
 <div class='row'>
