--- a/_includes/new-album-flash.html
+++ b/_includes/new-album-flash.html
@@ -1,6 +1,6 @@
-<div class="panel panel-info new-album">
+<!--<div class="panel panel-info new-album">
   <div class="panel-body">
     <div class="throbbing-gristle"></div>
     New album 'Takatsuka' <a href='/albums/takatsuka'>OUT NOW</a>
   </div>
-</div>
+</div>-->
