--- a/_includes/js-boilerplate.html
+++ b/_includes/js-boilerplate.html
@@ -2,3 +2,6 @@
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src='/javascript/bootstrap.js'></script>
+
+<!-- momentjs -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/locale/en-gb.js'></script>
