--- a/_includes/next-gig-flash.html
+++ b/_includes/next-gig-flash.html
@@ -26,7 +26,7 @@ if(next) {
   d = '<div class="panel panel-info next-gig">'
   d += '<div class="panel-body">'
   d += '<div class="throbbing-gristle"></div>'
-  d += 'Next gig: <a href="' + next.url + '">' + moment(next.date).format('dddd, Do MMMM') + ' at ' + next.title + '</a>'
+  d += 'Next gig: <a href="' + next.url + '">' + moment(next.date).format('dddd, Do MMM') + ' at ' + next.title + '</a>'
   d += '</div>'
   d += '</div>'
 
