--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,13 +7,13 @@
 
       <div class='col-md-8 col-md-pull-4 hidden-sm'>
         <a href='/'>
-          <img src='/assets/images/logos/wide/banner.png' alt='Raw Funk Maharishi' class='logo'/>
+          <img src='/assets/images/logos/wide/banner.svg' alt='Raw Funk Maharishi' class='logo'/>
         </a>
       </div>
 
       <div class='col-md-8 col-md-pull-4 visible-sm'>
         <a href='/'>
-          <img src='/assets/images/logos/wide/banner.png' alt='Raw Funk Maharishi' class='little-logo'/>
+          <img src='/assets/images/logos/wide/banner.svg' alt='Raw Funk Maharishi' class='little-logo'/>
         </a>
       </div>
     </div>
