--- a/_sass/buttons.scss
+++ b/_sass/buttons.scss
@@ -1,13 +1,9 @@
-#twitter-buttons {
-  text-align: center;
-}
-
 .btn-info {
-  background-color: $rfm-green;
-  border-color: $rfm-green;
+  background-color: $brand-complement;
+  border-color: $brand-complement;
 }
 
 .btn-warning {
-  background-color: $rfm-orange;
-  border-color: $rfm-orange;
+  background-color: $brand-primary;
+  border-color: $brand-primary;
 }
