--- a/_sass/bootstrap-custom.scss
+++ b/_sass/bootstrap-custom.scss
@@ -1,12 +1,16 @@
-$rfm-green:      #86cabc;
-$rfm-orange:     #fd6400;
-$rfm-dark-green: #4B7069;
+// $brand-complement:      #86cabc;
+// $brand-primary:     #fd6400;
+// $brand-secondary: #4B7069;
+//
+// $gray-darker:   lighten(#000, 13.5%); // #222
+// $gray-dark:     lighten(#000, 20%);   // #333
+// $gray:          lighten(#000, 33.5%); // #555
+// $gray-light:    lighten(#000, 46.7%); // #777
+// $gray-lighter:  lighten(#000, 93.5%); // #eee
+//
+// $brand-primary: $brand-complement;
+// $brand-info:    $brand-primary;
 
-$gray-darker:   lighten(#000, 13.5%); // #222
-$gray-dark:     lighten(#000, 20%);   // #333
-$gray:          lighten(#000, 33.5%); // #555
-$gray-light:    lighten(#000, 46.7%); // #777
-$gray-lighter:  lighten(#000, 93.5%); // #eee
+@import 'colours';
 
-$brand-primary: $rfm-green;
-$brand-info:    $rfm-orange;
+$background-image: url('https://www.goodfreephotos.com/albums/sky-and-clouds/above-the-sea-of-clouds.jpg');
