--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,5 +1,6 @@
 @import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
 @import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono);
 @import url(http://fonts.googleapis.com/css?family=Dosis);
+@import url(https://fonts.google.com/specimen/Montserrat);
 
-$font-family-sans-serif: "Dosis", sans-serif;
+$font-family-sans-serif: "Montserrat", sans-serif;
