--- a/_sass/gigs.scss
+++ b/_sass/gigs.scss
@@ -5,10 +5,10 @@
 .olControlAttribution {
   right: 5px;
   top: 280px;
-  color: $rfm-orange;
+  color: $brand-primary;
   font-weight: bold;
   a {
-    color: $rfm-dark-green;
+    color: $brand-secondary;
   }
 }
 
@@ -32,7 +32,7 @@
   font-size: 1.5em;
 
   dt {
-    color: $rfm-orange;
+    color: $brand-primary;
   }
 
   dd {
@@ -46,8 +46,8 @@
   bottom:12%;
   right:1%;
   font-size: 1em;
-  background-color: $rfm-green;
-  color: $rfm-orange;
+  background-color: $brand-complement;
+  color: $brand-secondary;
   opacity: 0.7;
   margin: 0px;
   padding: 0px;
@@ -55,12 +55,12 @@
   max-width: 75%;
 
   a {
-    color: black;
+    color: $white;
+    opacity: $opacity;
   }
 
   a:hover {
-    background-color: $rfm-orange;
-    color: $rfm-green;
+    opacity: 1;
     text-decoration: none;
   }
 }
@@ -74,7 +74,7 @@
 }
 
 .leaflet-container a {
-  color: $rfm-green;
+  color: $brand-complement;
 }
 
 .other-bands, .more-info {
