--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -7,8 +7,7 @@
    text-transform: uppercase;
 
   ul {
-    color: black;
-    font-size: 1.5em;
+    font-size: 1.1em;
     line-height: 4px;
     text-align: right;
   }
@@ -17,12 +16,13 @@
 .nav {
   li {
     a {
-      color: black;
+      color: $white;
+      opacity: $opacity;
     }
 
     a:hover, a:focus {
-      background-color: $rfm-orange;
-      opacity: 0.7;
+      background: transparent;
+      opacity: 1;
     }
   }
 }
@@ -33,7 +33,7 @@
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: $rfm-green;
+  background-color: $brand-complement;
   opacity: 0.5;
 }
 
