--- a/_sass/pictures.scss
+++ b/_sass/pictures.scss
@@ -41,3 +41,22 @@ $flickr-height: 240px;
 .thumbnail {
   border: none;
 }
+
+g#rawfunkmaharishi {
+  fill: white;
+  opacity: 0.5;
+
+  path:hover {
+    fill: $gray-lighter;
+  }
+}
+
+svg {
+  max-width: 90%;
+  margin-top: $padding-small-vertical;
+  margin-bottom: $padding-small-vertical;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 400px;
+}
