--- a/_sass/throbbing-gristle.scss
+++ b/_sass/throbbing-gristle.scss
@@ -14,7 +14,7 @@
   top: -23px; left: -13px;
 
   animation: pulsate 1.8s ease-out infinite;
-  border: 10px solid $rfm-orange;
+  border: 10px solid $brand-primary;
   border-radius: 100%;
   opacity: 1;
   position: absolute;
