--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,17 @@
-<div class='header {{ include.trim_class }}'>
-    <div class='row'>
-      <div class='col-md-4 col-md-push-8'>
-        {% include navigation.html %}
-      </div>
+<div class='header {{ include.trim_class }} row'>
+  <div class='col-md-4 col-md-push-8'>
+    {% include navigation.html %}
+  </div>
 
-      <div class='col-md-8 col-md-pull-4 hidden-sm top-banner'>
-        <a href='/'>
-          {% include logos/wide/banner.svg %}
-        </a>
-      </div>
+  <div class='col-md-8 col-md-pull-4 hidden-sm top-banner'>
+    <a href='/'>
+      {% include logos/wide/banner.svg %}
+    </a>
+  </div>
 
-      <div class='col-md-8 col-md-pull-4 visible-sm'>
-        <a href='/'>
-          {% include logos/square/banner.svg %}
-        </a>
-      </div>
-    </div>
+  <div class='col-md-8 col-md-pull-4 visible-sm'>
+    <a href='/'>
+      {% include logos/square/banner.svg %}
+    </a>
+  </div>
 </div>
