--- a/_sass/gigs.scss
+++ b/_sass/gigs.scss
@@ -51,8 +51,8 @@
   opacity: 0.7;
   margin: 0px;
   padding: 0px;
-  text-align: right;
-  max-width: 75%;
+  text-align: center;
+  max-width: 95%;
 
   a {
     color: $white;
