--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,30 +1,10 @@
 $header-height: 270px;
 
 .header {
-  top: 0;
-  width: 100%;
-
   background-image: $background-image;
   background-position: center;
   height: $header-height;
-  margin-top: 0;
-  padding-right: 0;
-  margin-right: 0;
+  padding: 0;
+  margin: 0;
   margin-bottom: 20px;
-
-  .logo {
-    width: 100%;
-    height: auto;
-  }
-
-  .little-logo {
-    width: 80%;
-    height: auto;
-    position: relative;
-    top: -200px;
-  }
-
-  .header-container {
-    width: 100%;
-  }
 }
