--- a/_sass/bootstrap-custom.scss
+++ b/_sass/bootstrap-custom.scss
@@ -13,4 +13,4 @@
 
 @import 'colours';
 
-$background-image: url('https://www.goodfreephotos.com/albums/sky-and-clouds/above-the-sea-of-clouds.jpg');
+$background-image: url('/assets/images/backgrounds/background.jpg');
