--- a/_sass/colours.scss
+++ b/_sass/colours.scss
@@ -3,7 +3,7 @@
 $brand-primary: $rgba-primary-0;
 $brand-complement: $rgba-complement-0;
 $brand-secondary: $rgba-secondary-1-0;
-//$brand-complement-2: $rgba-secondary-2-0;
+$brand-complement-2: $rgba-secondary-2-0;
 
 $white: white;
 
