--- a/_sass/gigs.scss
+++ b/_sass/gigs.scss
@@ -46,8 +46,8 @@
   bottom:12%;
   right:1%;
   font-size: 1em;
-  background-color: $brand-complement;
-  color: $brand-secondary;
+  background-color: $brand-complement-2;
+  color: $brand-primary;
   opacity: 0.7;
   margin: 0px;
   padding: 0px;
