--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -29,7 +29,7 @@
 
 /* mobile version */
 .navbar-default .navbar-toggle {
-  border-color: $gray;
+  border-color: $brand-complement-2;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
@@ -38,5 +38,5 @@
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: $gray;
+  background-color: $brand-complement-2;
 }
